[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/Hack-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Interface/HUD.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.133333, 0.756863, 0.933333, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0941176, 0.172549, 0.309804, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.133333, 0.756863, 0.933333, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0941176, 0.172549, 0.309804, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.372549, 0.403922, 0.47451, 1 )
expand_margin_top = 20.0

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )
Button/colors/font_color = Color( 0.0941176, 0.172549, 0.309804, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 1, 1, 1, 1 )
Button/colors/font_color_pressed = Color( 0.0941176, 0.172549, 0.309804, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )
WindowDialog/colors/title_color = Color( 0, 0, 0, 1 )
WindowDialog/constants/close_h_ofs = 18
WindowDialog/constants/close_v_ofs = 18
WindowDialog/constants/scaleborder_size = 4
WindowDialog/constants/title_height = 20
WindowDialog/fonts/title_font = null
WindowDialog/icons/close = null
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = SubResource( 8 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 7 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 256.0
margin_top = 152.0
margin_right = -256.0
margin_bottom = -152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="MarginContainer"]
visible = true
margin_right = 512.0
margin_bottom = 296.0
window_title = "Checkout"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/WindowDialog"]
anchor_right = 1.0
anchor_bottom = 0.783784
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/WindowDialog/ScrollContainer"]
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Cancel" type="Button" parent="MarginContainer/WindowDialog"]
anchor_left = 0.125
anchor_top = 0.837838
anchor_right = 0.375
anchor_bottom = 0.945946
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Buy" type="Button" parent="MarginContainer/WindowDialog"]
anchor_left = 0.625
anchor_top = 0.837838
anchor_right = 0.875
anchor_bottom = 0.945946
text = "Buy!! :-)"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Inventory" type="Button" parent="."]
anchor_left = 0.78125
anchor_top = 0.92
anchor_right = 0.992188
anchor_bottom = 0.986667
text = "Inventory"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="InventoryContainer" type="MarginContainer" parent="."]
anchor_left = 0.78125
anchor_top = 0.64
anchor_right = 0.992188
anchor_bottom = 0.92
margin_bottom = -3.8147e-06
__meta__ = {
"_edit_use_anchors_": true
}

[node name="WindowDialog" type="WindowDialog" parent="InventoryContainer"]
visible = true
margin_right = 216.0
margin_bottom = 168.0
window_title = "Inventory"

[node name="ScrollContainer" type="ScrollContainer" parent="InventoryContainer/WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryContainer/WindowDialog/ScrollContainer"]
[connection signal="pressed" from="MarginContainer/WindowDialog/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="MarginContainer/WindowDialog/Buy" to="." method="_on_Buy_pressed"]
[connection signal="pressed" from="Inventory" to="." method="_on_Inventory_pressed"]
